--- a/_pages/events/2025-03-maths.md
+++ b/_pages/events/2025-03-maths.md
@@ -8,7 +8,7 @@ exclude: true
 # Are you hungry to learn more about coding in Python and the role of ChatGPT?
 # Catered event on **21.03.25, 13:00-17:00** in **CTT Joseph Black: C407** run by UofG staff.
 
-We are running a workshop specifically aimed at **level 2 students in the School of Geographical and Earth Sciences** to support you in your coding journey.
+We are running a workshop specifically aimed at **level 2 students in the School of Mathematics & Statistics** to support you in your coding journey.
 
 **Any coding experience is welcome, and you do not need to have used any AI tool before!** 
 
