--- a/_pages/events/2025-03-geo.md
+++ b/_pages/events/2025-03-geo.md
@@ -6,7 +6,7 @@ exclude: true
 ---
 
 # Are you hungry to learn more about coding in Python and the role of ChatGPT?
-# Catered event on **19.03.25, 10:00-14:00** in **Gilbert Scott Building, East Quad Computer Lab 202** run by UofG staff.
+<!-- # Catered event on **TBD** in **Gilbert Scott Building, East Quad Computer Lab 202** run by UofG staff. -->
 
 We are running a workshop specifically aimed at **undergraduate students in the School of Geographical and Earth Sciences** to support you in your coding journey.
 
