Update Geo/Earth Science event date

--- a/_pages/events/2025-03-geo.md
+++ b/_pages/events/2025-03-geo.md
@@ -6,7 +6,7 @@ exclude: true
 ---
 
 # Are you hungry to learn more about coding in Python and the role of ChatGPT?
-<!-- # Catered event on **TBD** in **Gilbert Scott Building, East Quad Computer Lab 202** run by UofG staff. -->
+# Catered event on **15th April 2025, at 1000–1400** in **Gilbert Scott Building, East Quad Computer Lab 202** run by UofG staff.
 
 We are running a workshop specifically aimed at **undergraduate students in the School of Geographical and Earth Sciences** to support you in your coding journey.
 
